Fix color of title of timeline items in dark mode

--- a/src/components/HomepageFeatures/index.module.scss
+++ b/src/components/HomepageFeatures/index.module.scss
@@ -7,7 +7,7 @@
 
 .sectionWrapper {
   padding-top: 80px;
-  padding-bottom: 50px;
+  padding-bottom: 60px;
 
   & > * {
     max-width: var(--ifm-container-width);
@@ -117,5 +117,8 @@
 
 .timelineItemTitle {
   font-weight: var(--ifm-font-weight-bold);
+}
+
+[data-theme="light"] .timelineItemTitle {
   color: var(--ifm-color-gray-900);
 }
